Fixing title card bug on iOS devices

--- a/src/styles/components/_project-card.scss
+++ b/src/styles/components/_project-card.scss
@@ -35,16 +35,18 @@
     filter: blur(5px) brightness(70%);
   } 
 
-  &:hover &__title {
-    left: 50%;
-    top: 19%;
-    transform: translateX(-50%);
-    background-color: transparent;
-    letter-spacing: .2rem;
-    font-weight: 800;
-    font-size: 1.6rem;
-    text-shadow: none;
-  }
+  // &:hover &__title {
+  //   left: 50%;
+  //   top: 19%;
+  //   transform: translateX(-50%);
+  //   background-color: transparent;
+  //   letter-spacing: .2rem;
+  //   font-weight: 800;
+  //   font-size: 1.6rem;
+  //   text-shadow: none;
+  //   width: max-content;
+  //   //text-align: center;
+  // }
 
   &:hover &__date {
     opacity: 1;
@@ -68,7 +70,7 @@
     color: #fff;
     text-transform: uppercase;
     letter-spacing: .1rem;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     text-align: center;
     opacity: 0;
     transition: all .2s ease-in-out;
@@ -93,7 +95,7 @@
     font-weight: 500;
     letter-spacing: .1rem;
     color: white;
-    width: max-content;
+    //width: max-content;
     transition: all .2s ease-in-out;
   }
 
